# poc-decentralised-swarm-intelligence

./: .gitignore  agile_mvp_document.md  general_rule.md  main.py  pyproject.toml  studi-kasus.txt
