[project]
name = "poc-decentralised-swarm-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "altair[all]>=6.0.0",
  "autogen-agentchat>=0.5.7",
  "autogen-ext[mcp]>=0.5.7",
  "fastmcp[tasks]>=3.1.0",
  "google-genai>=1.66.0",
  "mesa[rec]>=3.5.0",
  "python-dotenv>=1.2.2",
  "streamlit>=1.55.0",
]
